force-app/main/default/objects/TriggerFlags__c/TriggerFlags__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom setting to enable or disable individual triggers</description>
    <label>Trigger Flags</label>
</CustomObject>