force-app/main/default/objects/TriggerFlags__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable Account Triggers</description>
    <label>Account</label>
    <type>Checkbox</type>
</CustomField>