force-app/main/default/objects/TriggerFlags__c/fields/Account_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Account_Team_Member__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Account Team Member</label>
    <type>Checkbox</type>
</CustomField>