force-app/main/default/objects/TriggerFlags__c/fields/ContactPointAddress__c.field-meta.xml
<CustomField>
    <fullName>ContactPointAddress__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Contact Point Address</label>
    <type>Checkbox</type>
</CustomField>