force-app/main/default/objects/TriggerFlags__c/fields/Displays_Material__c.field-meta.xml
<CustomField>
    <fullName>Displays_Material__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Displays Material</label>
    <type>Checkbox</type>
</CustomField>