force-app/main/default/objects/TriggerFlags__c/fields/Email_Message__c.field-meta.xml
<CustomField>
    <fullName>Email_Message__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Message</label>
    <type>Checkbox</type>
</CustomField>