force-app/main/default/objects/TriggerFlags__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables Event Triggers</description>
    <label>Event</label>
    <type>Checkbox</type>
</CustomField>