force-app/main/default/objects/TriggerFlags__c/fields/Installation_Order__c.field-meta.xml
<CustomField>
    <fullName>Installation_Order__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Installation Order</label>
    <type>Checkbox</type>
</CustomField>