force-app/main/default/objects/TriggerFlags__c/fields/Installation_Request__c.field-meta.xml
<CustomField>
    <fullName>Installation_Request__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Installation Request</label>
    <type>Checkbox</type>
</CustomField>