force-app/main/default/objects/TriggerFlags__c/fields/InstallationOrder__c.field-meta.xml
<CustomField>
    <fullName>InstallationOrder__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Installation Order</label>
    <type>Checkbox</type>
</CustomField>