force-app/main/default/objects/TriggerFlags__c/fields/InstallationRequest__c.field-meta.xml
<CustomField>
    <fullName>InstallationRequest__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Installation Request</label>
    <type>Checkbox</type>
</CustomField>