force-app/main/default/objects/TriggerFlags__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables Lead Trigger</description>
    <label>Lead</label>
    <type>Checkbox</type>
</CustomField>