force-app/main/default/objects/TriggerFlags__c/fields/Moodboard__c.field-meta.xml
<CustomField>
    <fullName>Moodboard__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Moodboard</label>
    <type>Checkbox</type>
</CustomField>