force-app/main/default/objects/TriggerFlags__c/fields/OppCustomProject__c.field-meta.xml
<CustomField>
    <fullName>OppCustomProject__c</fullName>
    <defaultValue>true</defaultValue>
    <label>OppCustomProject</label>
    <type>Checkbox</type>
</CustomField>