force-app/main/default/objects/TriggerFlags__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables Opportunity Triggers</description>
    <label>Opportunity</label>
    <type>Checkbox</type>
</CustomField>