force-app/main/default/objects/TriggerFlags__c/fields/Opportunity_Actor__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Actor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Opportunity Actor</description>
    <label>Opportunity Actor</label>
    <type>Checkbox</type>
</CustomField>