force-app/main/default/objects/TriggerFlags__c/fields/Opportunity_Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Contact_Role__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Opportunity Contact Role</label>
    <type>Checkbox</type>
</CustomField>