force-app/main/default/objects/TriggerFlags__c/fields/Opportunity_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Line_Item__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Opportunity Line Item</label>
    <type>Checkbox</type>
</CustomField>