force-app/main/default/objects/TriggerFlags__c/fields/Opportunity_Split__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Split__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Opportunity Split</description>
    <label>Opportunity Split</label>
    <type>Checkbox</type>
</CustomField>