force-app/main/default/objects/TriggerFlags__c/fields/Opportunity_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Team_Member__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Opportunity Team Member</description>
    <label>Opportunity Team Member</label>
    <type>Checkbox</type>
</CustomField>