force-app/main/default/objects/TriggerFlags__c/fields/Sales_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Sales_Relationship__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Sales Relationship</description>
    <label>Sales Relationship</label>
    <type>Checkbox</type>
</CustomField>