force-app/main/default/objects/TriggerFlags__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Task</description>
    <label>Task</label>
    <type>Checkbox</type>
</CustomField>