force-app/main/default/objects/TriggerFlags__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <defaultValue>true</defaultValue>
    <description>User</description>
    <label>User</label>
    <type>Checkbox</type>
</CustomField>